add read-only CPO organization details
